<resources>
    <string name="app_name">Timer</string>
    <string name="inserisci_numero">inserisci_numero</string>
    <string name="button">Button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_30">00:30</string>
    <string name="accedi_alla_seconda_activity">Accedi Alla Seconda Activity</string>
    <string name="text">Text</string>
    <string name="HOME">HOME</string>
    <string name="inserisci_pin">inserisci pin</string>
    <string name="ThirdActivity">Accedi alla terza Activity</string>
    <string name="benvenuto">BENVENUTO</string>
</resources>